Reduce padding on event_attendee page

--- a/event_attend.html
+++ b/event_attend.html
@@ -148,7 +148,7 @@
 
 <div id="event-attend-details" class="section width-normal padding-none">
 	<div class="section-inner bg-white text-color-override">
-		<div class="padding-medium margin-bottom-none">
+		<div class="padding-small margin-bottom-none">
 		{% if campaign.show_public_description %}
 			{% autoescape off %}
 			<div class="event-description" data-read-more-after="3">{{ event.public_description }}</div>
@@ -181,7 +181,7 @@
 
 {% if form.ground_rules|is_nonblank and not update %}
 <div id="event-attend-rules" class="section width-normal padding-none">
-	<div class="section-inner bg-ltgray padding-medium">
+	<div class="section-inner bg-ltgray padding-small">
 		<div id="id_ground_rules_text" class="nojs">
 			<h3 class="section-header text-center margin-bottom-medium">Rules:</h3>
 			<hr>
