Update mobile/tablet view of update page

--- a/recurring_cancel.html
+++ b/recurring_cancel.html
@@ -65,7 +65,7 @@ We have to have a form, or the JavaScript doesn't work.
 
 <div id="confirmationPopup" class="js-hide js-hidden">
 <h2 class="text-center">Are you sure?</h2>
-<button id="lowerBtn" class="submit submitConfirm float-left button bg-blue">Lower your monthly gift amount instead</button>
+<button id="lowerBtn" class="submit submitConfirm float-left-desktop button bg-blue">Lower your monthly gift amount instead</button>
 <button id="cancelBtn" class="submit submitConfirm button bg-blue">Yes, I'm sure. Cancel my donation</button>
 </div>
 <script type="text/ak-template" for="inactive">
@@ -111,8 +111,10 @@ We have to have a form, or the JavaScript doesn't work.
 .display-none {
     display: none !important;
 }
-.float-left {
-    float: left;
+@media screen and (min-width: 1024px) {
+    .float-left-desktop {
+        float: left;
+    }
 }
 </style>
 
