Add margin to buttons on Update page

--- a/recurring_cancel.html
+++ b/recurring_cancel.html
@@ -66,7 +66,7 @@ We have to have a form, or the JavaScript doesn't work.
 <div id="confirmationPopup" class="js-hide js-hidden">
 <h2 class="text-center">Are you sure?</h2>
 <button id="lowerBtn" class="submit submitConfirm float-left-desktop button bg-blue">Lower your monthly gift amount instead</button>
-<button id="cancelBtn" class="submit submitConfirm button bg-blue">Yes, I'm sure. Cancel my donation</button>
+<button id="cancelBtn" class="submit submitConfirm margin-top-small button bg-blue">Yes, I'm sure. Cancel my donation</button>
 </div>
 <script type="text/ak-template" for="inactive">
 [% if (inactive.length) { %]
