Move Update your Donation button to user view page

--- a/user_view.html
+++ b/user_view.html
@@ -27,6 +27,7 @@
 </p>
 
 <p><a href="update/" class="button button-secondary">Update your information</a></p>
+<p><a href="/cms/pledge/update/update/" class="button button-secondary">Update your donation</a></p>
 </div>
 <!--
 <div class="section note">
