Donation, not Donate

--- a/wrapper.html
+++ b/wrapper.html
@@ -51,7 +51,7 @@
 			f.parentNode.insertBefore(j, f);
 		})(window, document, 'script', 'dataLayer', 'GTM-MNNGDHL');
 	</script>
-       {% if page.type == "Donate" %}
+       {% if page.type == "Donation" %}
                <!-- Conversion Funnel Tracking -->
                <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JDP8BTBJM"></script>
                <script>
