ga4 data mismatch fix

--- a/donate.html
+++ b/donate.html
@@ -854,8 +854,8 @@
           items: [{
             item_id: '{{page.id}}',
             item_name: '{{ page.name|escapeall }}',
-            item_category: frequency,
-            item_variant: amount_type, 
+            item_category: amount_type,
+            item_variant: frequency, 
             quantity: 1
           }]
         }
