Add buttons to recurring donations

--- a/user_view.html
+++ b/user_view.html
@@ -72,6 +72,14 @@
 {% endif %}
 {% endfor %}
 </ul>
+<div>
+  <p>
+    Start a new recurring donation:
+    <a href="#" class="button button-secondary">Credit card</a>
+    <a href="#" class="button button-secondary">Paypal</a>
+    <a href="#" class="button button-secondary">ActBlue</a>
+  </p>
+</div>
 </div>
 {% endif %}
 
