Update recurring cancel page

--- a/recurring_cancel.html
+++ b/recurring_cancel.html
@@ -12,7 +12,7 @@
 <div>
 <p id="unknown_user"></p>
 <p id="known_user"></p>
-<p>Logged in as {{ logged_in_user.name }}. <a href="/logout/">Logout</a></p>
+<p>Logged in as {{ logged_in_user.name }}. <a href="/logout/">Logout</a> or go to my <a href="/me">user record</a>.</p>
 </div>
 
 {% if active %}
