Add Paypal title to appropriate box

--- a/recurring_info.html
+++ b/recurring_info.html
@@ -5,7 +5,7 @@
     {% comment %} akid is needed to tell javascript required field checking we have a user, but the view requires a user to be logged in. {% endcomment %}
     <input type="hidden" name="akid" value="{{ logged_in_user.token }}">
 
-    <div class="ak-field-box">
+    <div class="ak-field-box{% if profile.order.payment_method == 'paypal' %} paypal{% endif %}">
         <div class="ak-styled-fields ak-labels-before {{templateset.custom_fields.field_errors_class|default:"ak-err-above"}}">
 {% once %}<ul id="ak-errors"></ul>{% endonce %}
           <ul class="ak-errors"></ul>
@@ -59,6 +59,9 @@
   
           {% endif %}
 
+          {% if profile.order.payment_method == "paypal" %}
+          <p>Paypal</p>
+          {% endif %}
         <div class="ak-show-amount clearfix">
             <label class="c4 cm5 ct5 alignright text-strong">
                 {{ profile.get_period_display }} Amount
