--- a/recurring_info.html
+++ b/recurring_info.html
@@ -5,7 +5,7 @@
     {% comment %} akid is needed to tell javascript required field checking we have a user, but the view requires a user to be logged in. {% endcomment %}
     <input type="hidden" name="akid" value="{{ logged_in_user.token }}">
 
-    <div class="ak-field-box{% if profile.order.payment_method == 'paypal' %} paypal{% endif %}">
+    <div class="ak-field-box">
         <div class="ak-styled-fields ak-labels-before {{templateset.custom_fields.field_errors_class|default:"ak-err-above"}}">
 {% once %}<ul id="ak-errors"></ul>{% endonce %}
           <ul class="ak-errors"></ul>
@@ -60,7 +60,7 @@
           {% endif %}
 
           {% if profile.order.payment_method == "paypal" %}
-          <p>Paypal</p>
+          <p class="c4 cm5 ct5 alignright text-strong">Paypal</p><p class="c6 cm5 ct5">&nbsp;</p>
           {% endif %}
         <div class="ak-show-amount clearfix">
             <label class="c4 cm5 ct5 alignright text-strong">
