Update new recurring donation button

--- a/user_view.html
+++ b/user_view.html
@@ -75,13 +75,8 @@ You've given a total of {{ profile.payment_total_amt }}.
 </li>
 {% endfor %}
 </ul>
-<div>
-  <p>
-    Start a new recurring donation:
-    <a href="#" class="button button-secondary">Credit card</a>
-    <a href="#" class="button button-secondary">Paypal</a>
-    <a href="#" class="button button-secondary">ActBlue</a>
-  </p>
+<div class="text-center">
+  <a href="https://act.350.org/donate/web-renew-recurring-payment" class="button button-secondary">Start a new recurring donation</a>
 </div>
 </div>
 {% endif %}
