Update default sms_notice phone number

--- a/user_form.html
+++ b/user_form.html
@@ -51,7 +51,7 @@
 			</label>
 			<div class="sms-privacy-notice text-small2 margin-top-normal" style="">
 				<p class="icon-before" data-icon="*">
-		        {{ options.sms_notice|default:"By providing your mobile number you consent to receive automated recurring text messages from 350.org. Message and data rates may apply. Text HELP for info or STOP to opt out to 833-976-4982.}. 350.org/mobile-tos" }}
+		        {{ options.sms_notice|default:"By providing your mobile number you consent to receive automated recurring text messages from 350.org. Message and data rates may apply. Text HELP for info or STOP to opt out to 833-976-4982. 350.org/mobile-tos" }}
 				</p>
 			</div>
 			</div>
