--- a/in_honor_donation.html
+++ b/in_honor_donation.html
@@ -10,7 +10,7 @@
     </div>
     <div id="in-honor-of-fields" class="margin-bottom-normal">
       {% if page.custom_fields.donate_honoree_alt_spelling == "Y" %}
-      <div class="input text input-text ak-">
+      <div class="input text input-text">
         <label for="action_in_honor_of_name">Honouree's Name</label>
         <input type="text" id="action_in_honor_of_name" name="action_in_honor_of_name" />
       </div>
